<resources>
    <string name="app_name">AppVideo</string>
    <string name="logo_name">MyVideo</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dangki">Đăng kí</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="searchvideo">Search video</string>
    <string name="music">Music</string>
    <string name="gaming">Gaming</string>
    <string name="news">News</string>
    <string name="movies">Movies</string>
</resources>
